# CVE_2021_40449

./: CMakeLists.txt  README.md
include/: command.h
include/common/: gadget.hpp  memtools.hpp  shellcode.hpp
include/core/: def.hpp  exp.hpp  poc.hpp
include/describe/: vuln_description.hpp
include/utils/: environment.hpp  gadget.hpp
src/: main.cpp
src/common/: gadget.cpp  memtools.cpp  shellcode.cpp
src/core/: def.cpp  exp.cpp  poc.cpp
src/describe/: vuln_description.cpp
src/utils/: environment.cpp  gadget.cpp
